# ansible-plan

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  args  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_playbook.yml  test_workflow.yml
ansible-workflow/: __main__.py  main.py  print_curses.py  textual_gui.py  workflow.py
ansible_plan/: cli.py  graph.py  service.py
ansible_plan/core/: drawer.py  engine.py  loader.py  models.py
ansible_workflow/: __main__.py  api.py  backend.py  cli.py  client.css  client.py  exceptions.py  loader.py  models.py  output.py  proxy.py  server.py  service.py  workflow.py
ansible_workflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ansible_workflow_service/: main.py  runner.py
backend/: main.py
examples/: 1_stdout_detach_and_kill.yml  2_label_nodes.yml  3_checkpoint_nodes.yml  4_textual_mode.yml  _to_be_imported.yml  _to_be_imported2.yml  _to_be_imported3.yml  _to_be_imported4.yml  _to_be_imported_minimal.yml  args  basic_input.yml  basic_serial_parallel.yml  basic_templating.yml  complex_nodes_example.yml  deeply_nested.yml  failing_node.yml  failing_workflow.yml  imported_workflow.yml  include_templating.yml  include_templating_2.yml  input1.yml  input2.yml  input3.yml  input4.yml  input5.yml  inventory.ini  long_names.yml  new_nodes_example.yml  retrying_workflow.yml  starting_node_test.yml  sub_templating.yml  sub_templating_minimal.yml  v1_complete_format.yml  vault_script_test.py  wrong_duplicated_id.yml  wrong_play_not_exists.yml  wrong_vault_script.yml  wrong_yaml_format.yml
(+53 files in other folders)
