[metadata]
name = ansible-workflow
author = BartokIT
author_email = bartok4it@bancaditalia.it
summary = "A tool to launch worflows from command line to emulate what is done from Ansible AWX workflow templates"
description_file = README.md
description_content_type = text/markdown
license_file = LICENSE

[entry_points]
console_scripts =
    ansible-workflow = ansible_workflow.cli:main

[files]
packages =
    ansible_workflow

[flake8]
# W503 - Line break occurred before a binary operator
ignore=W503
max-line-length=160

[options]
zip_safe = False
include_package_data = True
install_requires =
    networkx
    textual
    rich
    jinja2
    ansible
    fastapi
    uvicorn
    pynput