[metadata]
name = ansible-plan
author = BartokIT
author_email =
summary = "A command-line tool for launching workflows composed of Red Hat Ansible® playbooks"
description_file = README.md
description_content_type = text/markdown
license_file = LICENSE

[entry_points]
console_scripts =
    ansible-plan = ansible_plan.cli:main

[files]
packages =
    ansible_plan

[flake8]
# W503 - Line break occurred before a binary operator
ignore=W503
max-line-length=160

[options]
zip_safe = False
include_package_data = True
install_requires =
    networkx
    textual
    rich
    jinja2
    ansible
    fastapi
    uvicorn
    httpx